--- a/BuildingEscapes/Config/DefaultEngine.ini
+++ b/BuildingEscapes/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/NewMap.NewMap
+GameDefaultMap=/Game/Maps/NewMap.NewMap
 GlobalDefaultGameMode="/Script/BuildingEscapes.BuildingEscapesGameMode"
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -48,5 +48,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
