--- a/BuildingEscapes/Config/DefaultGame.ini
+++ b/BuildingEscapes/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2F36CFD34E09126090385DA5979082FA
+CompanyName=Rewriter
 
 [StartupActions]
 bAddPacks=True
